@startuml

class Teacher {
    + name
    + passportNumber
    + phoneNumber
    + email
    + status
    + salary
    + bonus
}

class Subject {
    + name
}

class Pupil {
    + name
    + age
    + grade
    + phoneNumber
    + email
}

class Address {
    + city
    + street
    + house
    + apartment
    + zipCode
}

class Parent {
    + name
    + phoneNumber
    + email
}

class SchoolClass {
    + letter
    + grade
    + year
}

class Schedule {
    + year
}

class Lesson {
    + date
}


class Curriculum {
    + grade
}

class Course {
    + lessonCount
}

class Mark {
    + value
}

class HomeWork {
    + description
}


Pupil "1" o-- "1" Address : lives by >
Parent "1" o-- "1" Address : lives by >
Pupil "many" -- "many" Parent: has >
Teacher "1" o-- "1" Address : lives by >
Teacher "1" -- "many" Subject : teaches >
Teacher .-left-> Mark : gives >
Teacher .-left-> HomeWork : gives >
SchoolClass "1" -- "1" Teacher: managed by >
SchoolClass "1" o-up- "many" Pupil: contains >
Schedule "1" *-left- "many" Lesson: contains >
Teacher "1" -right- "many" Lesson: conducts >
SchoolClass "1" -- "many" Lesson: attends >
Curriculum "1" *-left- "many" Course: contains >
Course "many" -left- "1" Subject: for >
Mark "many" -- "1" Lesson: given during >
Pupil "1" -right- "many" Mark: gets >
Pupil "1" .-right- "many" HomeWork: views >
Parent "1" .-right- "many" HomeWork: views >
Parent "1" .-right- "many" Mark: views >
Lesson "many" -- "1" Subject: for >
HomeWork "1" -- "1" Lesson: assigned to >

@enduml
